--- a/NeuroBlog/NeuroBlog/.env.template
+++ b/NeuroBlog/NeuroBlog/.env.template
@@ -1,7 +1,8 @@
 SECRET_KEY=
 DEBUG=
-POSTGRES_NAME=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
+ENGINE=
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+DATABASE_PORT=
