--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,12 @@ django-taggit==3.1.0
 gitdb==4.0.10
 GitPython==3.1.30
 Pillow==9.3.0
+pip==23.0
 psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pytz==2022.6
+setuptools==65.6.3
 smmap==5.0.0
 sqlparse==0.4.3
 typing_extensions==4.4.0
+wheel==0.38.4
